ont-api: owl-annotation, graph-model interface